# kazumi

./: .dockerignore  .env.example  .env.production  .gitignore  API_REFERENCE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  alembic.ini  api_logs.txt  api_logs_utf8.txt  docker-compose.yml  logs.txt  logs_utf8.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 73b51b0ba65e_create_all_tables.py  a1b2c3d4e5f6_add_escola_id_to_turmas.py
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  aluno.py  atividade.py  avaliacao.py  disciplina.py  escola.py  evento.py  gestor.py  mensagem.py  metrica.py  notificacao.py  pei.py  professor.py  responsavel.py  turma.py  user.py
app/routers/: __init__.py  alunos.py  atividades.py  auth.py  avaliacoes.py  disciplinas.py  escolas.py  eventos.py  mensagens.py  metricas.py  notificacoes.py  pei.py  relatorios.py  turmas.py  upload.py  users.py
app/schemas/: __init__.py  aluno.py  atividade.py  avaliacao.py  disciplina.py  escola.py  evento.py  gestor.py  mensagem.py  metrica.py  notificacao.py  pei.py  professor.py  responsavel.py  turma.py  user.py
app/services/: __init__.py  local_storage_service.py  metrics.py  reports.py  s3_service.py
app/utils/: __init__.py  dependencies.py  security.py
docs/: ARCHITECTURE.md  COMANDOS-EC2.md
kazumi-front/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
kazumi-front/src/: App.tsx  index.css
kazumi-front/src/components/: Layout.tsx  (+1 more)
scripts/: seed_data.py
(+17 files in other folders)
