[project]
name = "kazumi"
version = "0.1.0"
description = "Kazumi Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "fastapi>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "psycopg2-binary==2.9.9",
    "pydantic-settings>=2.7.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]>=0.34.0",
    "email-validator>=2.1.0",
]

[tool.uv]
